<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- Адрес сервера -->
            <TextView
                android:id="@+id/textViewServerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addres_server" />

            <EditText
                android:id="@+id/editTextServerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addres_" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- Порт сервера -->
            <TextView
                android:id="@+id/textViewPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port_" />

            <EditText
                android:id="@+id/editTextPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/port"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- Логин -->
            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_login" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- Пароль -->
            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psw" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
